<resources>
    <string name="app_name">Thirsty Plant</string>
    <string name="return_to_login">Return to login</string>
    <string name="choose_your_password">Choose your password....</string>
    <string name="enter_email_address">Enter email address...</string>
    <string name="don_t_have_an_account_click_the_link_to_create_one">Don\'t have an account? Click here!</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="plant">Plant</string>
    <string name="logout">Logout</string>
    <string name="homescreen">Homescreen</string>
    <string name="add_plant">Add Plant</string>
    <string name="add_a_plant">Add a plant...</string>
    <string name="instructions">Instructions</string>
    <string name="when_did_you_acquire_the_plant">When did you acquire the plant?</string>
    <string name="any_special_care_instructions">Any special care instructions?</string>
    <string name="location">Location</string>
    <string name="plant_name">Plant name</string>
    <string name="what_is_the_name_of_the_plant">Does your plant have a name?</string>
    <string name="what_is_kind_of_plant_is_it">What kind of plant is it?</string>
    <string name="nickname">Nickname</string>
    <string name="where_is_the_plant_located">Where is the plant located?</string>
    <string name="date">MM/DD/YYYY</string>
    <string name="create_plant">Create Plant</string>
    <string name="fertilization_schedule">Fertilization Schedule...</string>
    <string name="watering_schedule">Watering schedule...</string>
    <string name="what_time_do_you_fertilize_this_plant">What time do you fertilize this plant</string>
    <string name="every_days">Every ___ days</string>
    <string name="when_will_you_fertilize_this_plant_again">When will you fertilize this plant again?</string>
    <string name="time">Time</string>
    <string name="how_often_do_you_fertlize_this_plant">How often do you fertlize this plant?</string>
    <string name="how_often_do_you_water_this_plant">How often do you water this plant?</string>
    <string name="what_time_do_you_water_this_plant">What time do you water this plant</string>
    <string name="when_will_you_water_this_plant_again">When will you water this plant again?</string>
    <string name="my_plants">My Plants</string>
    <string name="title_activity_my_plants">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="none">None</string>
    <string name="add_photo">Add photo</string>
    <string name="todo">TODO</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="will_you_be_fertilizing_this_plant">Will you be fertilizing this plant?</string>
    <string name="set_schedule">Set Schedule</string>

</resources>