<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.thirstyplant.activities.WaterSchedule">

    <Button
        android:id="@+id/setSchedule"
        android:layout_width="144dp"
        android:layout_height="59dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="68dp"
        android:background="#3F51B5"
        android:text="@string/set_schedule"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxYes" />

    <EditText
        android:id="@+id/waterSchedule"
        android:layout_width="372dp"
        android:layout_height="43dp"
        android:layout_marginTop="1dp"
        android:autofillHints=""
        android:background="#6B3F51B5"
        android:ems="10"
        android:hint="@string/every_days"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.41"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView19" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="372dp"
        android:layout_height="18dp"
        android:layout_marginTop="50dp"
        android:text="@string/how_often_do_you_water_this_plant"
        android:textColor="#3F51B5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.41"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timeTextWater" />

    <EditText
        android:id="@+id/timeTextWater"
        android:layout_width="372dp"
        android:layout_height="43dp"
        android:layout_marginTop="1dp"
        android:background="#6B3F51B5"
        android:clickable="true"
        android:ems="10"
        android:focusable="true"
        android:focusableInTouchMode="false"
        android:hint="@string/time"
        android:importantForAutofill="no"
        android:inputType="time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.41"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView18" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="372dp"
        android:layout_height="18dp"
        android:layout_marginTop="50dp"
        android:text="@string/what_time_do_you_water_this_plant"
        android:textColor="#3F51B5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.41"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateTextWater" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/gochi_hand"
        android:text="@string/watering_schedule"
        android:textColor="#3F51B5"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="372dp"
        android:layout_height="18dp"
        android:layout_marginTop="50dp"
        android:text="@string/when_will_you_water_this_plant_again"
        android:textColor="#3F51B5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.41"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <EditText
        android:id="@+id/dateTextWater"
        android:layout_width="372dp"
        android:layout_height="43dp"
        android:layout_marginTop="1dp"
        android:autofillHints=""
        android:background="#6B3F51B5"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:hint="@string/date"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.41"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView17" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="200dp"
        android:layout_height="18dp"
        android:layout_marginTop="50dp"
        android:text="@string/will_you_be_fertilizing_this_plant"
        android:textColor="#3F51B5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.426"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/waterSchedule" />

    <CheckBox
        android:id="@+id/checkBoxYes"
        android:layout_width="118dp"
        android:layout_height="43dp"
        android:layout_marginStart="144dp"
        android:layout_marginTop="8dp"
        android:background="#6B3F51B5"
        android:checked="false"
        android:text="@string/yes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

</androidx.constraintlayout.widget.ConstraintLayout>